# mars-probe-api

./: CHALLENGE.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
mars_probe_api/: app.py  database.py  models.py  schemas.py
mars_probe_api/models/: probe.py
mars_probe_api/routers/: probes.py
mars_probe_api/schemas/: probe.py
mars_probe_api/services/: probe_service.py
migrations/: env.py
migrations/versions/: 9e74d5b851a1_add_direction_check_constraint.py  e5a19e966fdb_create_probe_table.py  ff8de762f6bd_add_size_and_position_non_negative_.py
tests/: conftest.py  test_models.py  test_probes.py  test_probes_create.py  test_probes_list.py  test_probes_move.py
tests/models/: test_probe.py
tests/routers/probes/: test_create.py  test_list_probes.py  test_move.py
tests/services/: test_probe_service.py
