[project]
name = "mars-probe-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryllari",email = "ryllarimarques@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
pythonpath = "."